[gd_scene load_steps=12 format=3 uid="uid://dnvhg4x6tgplu"]

[ext_resource type="Script" path="res://scripts/bouncer.gd" id="1_26agn"]
[ext_resource type="Texture2D" uid="uid://l5hufo7igo06" path="res://sprites/level_sprites/Bouncer.png" id="1_wxcv1"]
[ext_resource type="AudioStream" uid="uid://7mb20s8t5554" path="res://audio/sfx/splendidjams__simple-pop-sound-effect.wav" id="3_hgyge"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0r34r"]
radius = 49.0

[sub_resource type="Animation" id="Animation_7sf21"]
resource_name = "Bounce"
length = 0.0667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qwnjw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hpqgc"]
_data = {
"Bounce": SubResource("Animation_7sf21"),
"RESET": SubResource("Animation_qwnjw")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pex7x"]
radius = 53.0

[sub_resource type="Animation" id="Animation_swcur"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}

[sub_resource type="Animation" id="Animation_t4fl2"]
resource_name = "movement"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 9.96667),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(-50, 0), Vector2(50, 0), Vector2(-50, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_srgds"]
_data = {
"RESET": SubResource("Animation_swcur"),
"movement": SubResource("Animation_t4fl2")
}

[node name="Bouncer" type="Node2D"]
z_index = 5
script = ExtResource("1_26agn")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
position = Vector2(1, 0)
rotation = 3.00976

[node name="Sprite2D" type="Sprite2D" parent="AnimatableBody2D"]
texture = ExtResource("1_wxcv1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
shape = SubResource("CircleShape2D_0r34r")

[node name="BounceAnimationPlayer" type="AnimationPlayer" parent="AnimatableBody2D"]
libraries = {
"": SubResource("AnimationLibrary_hpqgc")
}

[node name="Area2D" type="Area2D" parent="AnimatableBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D/Area2D"]
shape = SubResource("CircleShape2D_pex7x")

[node name="SwayingAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_srgds")
}
autoplay = "movement"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hgyge")

[connection signal="body_entered" from="AnimatableBody2D/Area2D" to="." method="_on_area_2d_body_entered"]
